--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap" rel="stylesheet">
@@ -12,6 +16,7 @@
   </head>
   <body>
     <header class="header ">
+      <div class="container">
       <nav class="header-navigation list ">
       <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
         </a>
@@ -22,14 +27,16 @@
           <li class="header-item"><a href="" class="header-link link">Contacts</a></li>
         </ul>
       </nav>  
-         
+         <div class="header-content">
        <address class="header-addres list link"><li>
         <a href="info@devstudio.com" class="header-mail list link">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="header-tel list link">+11 (000) 111-11-11</a></li></address> 
-    
+        </div>
+    </div>
 
     </header>
     <main class="hero">
+      <div class="container">
       <section class="hero-section">
         <h1 style="display: none;">Portfolio</h1>
           <!-- Кнопки -->
@@ -99,19 +106,20 @@
               </img>
             </li>
           </ul>
-
+</div>
       <!-- Портфоліо -->
     </main>
 
 
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
 
       <p class="footer-subtitle">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-   
+   </div>
     </footer> 
 
 
