--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header ">
-      <div class="container">
+      <div class="container header-container">
       <nav class="header-navigation list ">
       <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
         </a>
@@ -89,7 +89,7 @@
             </li>
             <li>
               <img src="./images/screen.jpg" alt="Illustrations">
-                <div class="-text">
+                <div class="portfolio-text">
                 <h2 class="portfolio-item">Screen Illustrations</h2>
                 <p>Design</p>
                 </div>
