css,index,portfolio

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
        </div>
       </section>
     </main>
-    <footer>
+    <footer class="hw-footer">
       <div class="container">
-  <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+  <a href="./index.html" class="logo link">Web<span class="logo-span logo-footer">Studio</span></a>
 
       <p class="footer-title">
         Increase the flow of customers and sales for your business with digital
