--- a/portfolio.html
+++ b/portfolio.html
@@ -135,7 +135,7 @@
 
     <footer class="footer">
       <div class="container">
-      <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+      <a href="./index.html" class="logo link">Web<span class="logo-span logo-footer">Studio</span></a>
 
       <p class="footer-subtitle">
         Increase the flow of customers and sales for your business with digital
