css,index and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
               <img src="./images/screen.jpg" alt="Illustrations">
                 <div class="portfolio-text">
                 <h2 class="portfolio-item">Screen Illustrations</h2>
-                <p>Design</p>
+                <p class="portfolio-subtitle">Design</p>
                 </div>
               </img>
             </li>
@@ -108,6 +108,7 @@
                 <div class="portfolio-text">
                 <h2 class="portfolio-item">Instagram Stories Concept</h2>
                 <p class="portfolio-subtitle">Design</p>
+                </div>
               </img>
             </li>
             <li>
@@ -127,9 +128,11 @@
               </img>
             </li>
           </ul>
-          </div>
+          
 </div>
+</section>
       <!-- Портфоліо -->
+     
     </main>
 
 
