--- a/portfolio.html
+++ b/portfolio.html
@@ -28,18 +28,20 @@
         </ul>
       </nav>  
 
-       <address class="header-addres list link">
-          <ul class="header-content"> 
-            <li class="header-address-list"><a href="info@devstudio.com" class="header-mail list link">info@devstudio.com</a></li>
-        <li class="header-address-list"><a href="tel:+110001111111" class="header-tel list link">+11 (000) 111-11-11</a></li></ul>
+      <address class="header-address list link">
+      <ul class="header-content"> 
+        <li class="header-address-list"><a href="info@devstudio.com" class="header-mail list link">info@devstudio.com</a></li>
+        <li class="header-address-list"><a href="tel:+110001111111" class="header-tel list link">+11 (000) 111-11-11</a></li>
+      </ul>
       </address> 
 
     </div>
 
     </header>
     <main class="hero">
-      <div class="container">
+     
       <section class="hero-section">
+         <div class="container">
         <h1 style="display: none;">Portfolio</h1>
           <!-- Кнопки -->
 <ul class="hero-list list">
@@ -129,6 +131,7 @@
             </li>
           </ul>
           
+</div>
 </div>
 </section>
       <!-- Портфоліо -->
