--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./css/styles.css">
   </head>
 
@@ -28,9 +28,8 @@
           <li class="hw-header-item"><a href=""class="hw-header-link link">Contacts</a></li>
         </ul>
       </nav>
-
-      <ul>
-       <address class="hw-header-address list">
+<address class="hw-header-address list">
+      <ul class="hw-address-list list">
         <li><a href="info@devstudio.com" class="hw-header-mail link">info@devstudio.com</a></li>
         <li ><a href="tel:+110001111111" class="hw-header-tel link">+11 (000) 111-11-11</a></li>
       </ul>
